--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   google_sign_in: ^6.1.6
+  google_maps_flutter: ^2.3.0
+  location: ^5.0.3
 
 dev_dependencies:
   flutter_test:
