--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   google_sign_in: ^6.1.6
   google_maps_flutter: ^2.3.0
   location: ^5.0.3
+  intl: ^0.19.0
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
