--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   location: ^5.0.3
   intl: ^0.19.0
   geolocator: ^11.0.0
+  search_map_location: ^0.0.6
+  maps_launcher: ^2.2.0
 
 dev_dependencies:
   flutter_test:
