--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   geolocator: ^11.0.0
   search_map_location: ^0.0.6
   maps_launcher: ^2.2.0
+  share_plus: ^7.2.2
 
 dev_dependencies:
   flutter_test:
